--- a/angular.json
+++ b/angular.json
@@ -90,7 +90,10 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/swiper.js",
+              "src/assets/js/swiper.js.map",
+            ]
           }
         },
         "lint": {
