--- a/angular.json
+++ b/angular.json
@@ -88,7 +88,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/swiper/css/swiper.css"
             ],
             "scripts": [
               "src/assets/js/swiper.js",
