--- a/angular.json
+++ b/angular.json
@@ -89,7 +89,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "./node_modules/swiper/css/swiper.css"
+              "./node_modules/swiper/css/swiper.css",
             ],
             "scripts": [
               "src/assets/js/swiper.js",
