--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@glidejs/glide": "^3.3.0",
+    "ngx-glide": "^1.0.1",
     "ngx-swiper-wrapper": "^9.0.1",
     "ngx-useful-swiper": "^9.0.3",
     "rxjs": "~6.5.4",
