--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@glidejs/glide": "^3.3.0",
     "ngx-glide": "^1.0.1",
     "ngx-swiper-wrapper": "^9.0.1",
+    "ngx-ui-loader": "^9.1.1",
     "ngx-useful-swiper": "^9.0.3",
     "rxjs": "~6.5.4",
     "swiper": "^5.4.1",
