--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rxjs": "~6.5.4",
     "swiper": "^5.4.1",
     "tslib": "^1.10.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
